--- a/JcClub/index.html
+++ b/JcClub/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1"><title>酷牛仔</title><meta content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=0;" name=viewport><style>html {
+<!DOCTYPE html><html><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1"><title>酷牛仔</title><meta content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=0" name=viewport><style>html {
         font-size : 20px;
       }
       @media only screen and (min-width: 401px){
@@ -28,4 +28,4 @@
       }
       select{
         -webkit-background: #fff;
-      }</style><script src=http://res.wx.qq.com/open/js/jweixin-1.4.0.js></script><link href=../JcClub/static/css/app.7eb27787608f614ee89068100b21edee.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=../JcClub/static/js/manifest.c2e72d9fac882d72fb8a.js></script><script type=text/javascript src=../JcClub/static/js/vendor.0a6a9c67b7952dd0f4b8.js></script><script type=text/javascript src=../JcClub/static/js/app.11e0ab1d9f080c9e8567.js></script></body></html>
+      }</style><script src=http://res.wx.qq.com/open/js/jweixin-1.4.0.js></script><link href=../JcClub/static/css/app.fd97d511a3b8b039dba22288ec080bac.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=../JcClub/static/js/manifest.c2e72d9fac882d72fb8a.js></script><script type=text/javascript src=../JcClub/static/js/vendor.0a6a9c67b7952dd0f4b8.js></script><script type=text/javascript src=../JcClub/static/js/app.07ece09fb5f2eac61174.js></script></body></html>
